# dupecheck

./: .gitignore  package.json  pnpm-lock.yaml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src/lib/: types.ts
src/lib/components/: image-buttons.svelte  image-details-table.svelte
src/routes/: +layout.svelte  +page.svelte
